[project]
name = "ai-test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.3.3",
    "langgraph>=0.6.0",
    "langchain>=0.3.0",
    "langchain-ollama>=1.0.1",
    "playwright>=1.58.0",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2.0"]
anthropic = ["langchain-anthropic>=0.2.0"]
cloud = ["langchain-openai>=0.2.0", "langchain-anthropic>=0.2.0"]
